Fix compare view overlap on short viewports
- Compare view charts overlapped with the modeling info below them on short viewports
- Have whole compare column scroll

--- a/src/icp/sass/pages/_compare.scss
+++ b/src/icp/sass/pages/_compare.scss
@@ -1,10 +1,15 @@
+$compare-footer-height: 50px;
+$compare-map-height: 25vh;
+// Calculate the height between the header and footer, and below the map
+$compare-chart-table-height: calc(100vh - #{$height-lg} - #{$compare-footer-height} - #{$compare-map-height});
+
 .compare-scenarios-container {
   overflow: hidden;
   position: absolute;
   top: $height-lg;
   left: 0;
   right: 0;
-  bottom: 50px;
+  bottom: $compare-footer-height;
   z-index: 100;
   background-color: $ui-light;
   transition: 0.3s ease left, 0.3s ease right;
@@ -15,7 +20,7 @@
     .scenario-overlay {
       position: absolute;
       z-index: 100;
-      height: 22%;
+      height: $compare-map-height;
       width: 100%;
       background-color: black;
       opacity: 0.25;
@@ -68,7 +73,7 @@
           }
 
           .map-region {
-            height: 22%;
+            height: $compare-map-height;
             width: 100%;
 
             .map-container {
@@ -105,15 +110,20 @@
             }
           }
 
+          .chart-table-regions {
+              height: $compare-chart-table-height;
+              overflow-y: auto;
+              overflow-x: hidden;
+          }
+
           .modeling-region {
             width: 100%;
-            height: 38vh;
 
             .modeling-container {
               position: relative;
               width: auto;
               height: 100%;
-              padding: 1rem;
+              padding: 1rem 1rem 0 1rem;
 
               .fa-spin {
                 margin-left: 8px;
@@ -140,20 +150,18 @@
 
           .modifications-region {
             width: 100%;
-            height: 30vh;
 
             .modifications-container {
               position: relative;
               width: 100%;
               height: 100%;
-              padding: 1rem;
-              overflow-y: auto;
+              padding: 0.5rem 1rem;
 
               .modifications-table {
                 font-size: 0.7rem;
                 width: 100%;
                 td {
-                  padding: 8px;
+                  padding: 2px;
                 }
                 .modification-area {
                   color: $brand-primary;
@@ -202,7 +210,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 50px;
+  height: $compare-footer-height;
   background-color: $ui-light;
   z-index: 100;
 
@@ -213,6 +221,10 @@
 
   h3 {
     display: inline-block;
-    padding: 1rem;
+    vertical-align: top;
+    line-height: $compare-footer-height;
+    padding-left: 1rem;
+    position: relative;
+    height: 100%;
   }
 }
